--- a/HTML/Bio.html
+++ b/HTML/Bio.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="/Css/blog.style.css" />
 </head>
 
-<body class="blogBody">
+<body>
     <nav>
         <div class='container'>
 
