--- a/HTML/Bio.html
+++ b/HTML/Bio.html
@@ -22,25 +22,27 @@
 
                 <div class="col-md-3 d-flex justify-content-center align-items-center py-3">
 
-                    <a href='/HTML/home.html'>Home</a>
+                    <a href='/HTML/home.html'>H O M E</a>
                 </div>
 
                 <div class="col-md-3 d-flex justify-content-center align-items-center py-3">
-                    <a href='/HTML/Blog.html'>Blog</a>
+                    <a href='/HTML/Blog.html'>B L O G</a>
                 </div>
 
                 <div class="col-md-3 d-flex justify-content-center align-items-center py-3">
-                    <a href='/HTML/Bio.html'>Bio</a>
+                    <a href='/HTML/Bio.html'>B I O</a>
                 </div>
 
                 <div class="col-md-3 d-flex justify-content-center align-items-center py-3">
-                    <a href='/HTML/Contact.html'>Contact</a>
+                    <a href='/HTML/Contact.html'>C O N T A C T</a>
                 </div>
 
             </div>
         </div>
 
     </nav>
+    <br>
+    <br>
 
 
 <div class="frame">
