--- a/HTML/Bio.html
+++ b/HTML/Bio.html
@@ -50,9 +50,9 @@
         <section>
             <div class='container'>
 
-                <div class="row d-flex py-5">
+                <div class="row py-5">
 
-                    <div class="col-sm-12  justify-content-center align-items-center d-flex py-5">
+                    <div class="col-sm-6 py-5">
                         <br>
 
                         <p class="bioParagraph">
@@ -66,16 +66,17 @@
                             bootcamp I took the Intro to Web Development bootcamp and really enjoyed it and decided to
                             pursue the Web Developer bootcamp.
                         </p>
-
-
-                        <div class="col-sm-6  justify-content-center align-items-center d-flex py-5">
-
-                            <img src="/Css/blog post IMAGES/Black and White profile pic.jpg" class="homePagePic"
-                                alt="Image of Mariola Hullings">
-
-
                         </div>
+                    
+                    <div class="col-sm-6 justify-content-right align-items-right py-5">
+
+                        <img src="/Css/blog post IMAGES/Black and White profile pic.jpg" class="homePagePic"
+                            alt="Image of Mariola Hullings">
+
+
                     </div>
+                </div>
+            </div>
         </section>
     </div>
 
